add swager l5 logout doc
