# app/Http/Controllers/Api/ProfileController.php
@@ -25,19 +25,68 @@ class ProfileController extends Controller
 
         $this->auth=$auth;
     }
+    /**
+     * @OA\Get(
+     *     path="/api/profile",
+     *     tags={"Authentication"},
+     *     summary="Get  profile summery",
+     *     description="Multiple status values can be provided with comma separated string",
+     *     operationId="show",
+     *     deprecated=true,
+     *    
+            security={{"Bearer":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *         
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticate"
+     *     )
+     *     
+     * )
+     */
     
 
-    public function show(){
+    public function show():JsonResponse
+
+    {
 
      
         try {
-             return Auth::guard()->user();
+             return $this->responseSuccess(Auth::guard()->user(),'User data  here');
             
         } catch (Exception $e) {
             return $this->responseError(null,'User not exists here');
         }
 
   }
+
+   /**
+     * @OA\Post(
+     *     path="/api/logout",
+     *     tags={"Authentication"},
+     *     summary="logout",
+     *     description="Multiple status values can be provided with comma separated string",
+     *     operationId="logout",
+     *     deprecated=true,
+
+           security={{"Bearer":{}}},
+     *    
+          
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *         
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid status value"
+     *     )
+     *     
+     * )
+     */
 
 
    public function logout():JsonResponse
